Fix alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -11,12 +11,13 @@ body {
 main {
   display: flex;
   color: white;
+  text-align: center;
 }
 
 nav {
   background: rgba(0, 0, 0, 0.3) !important;
   width: 100%;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 5px 5px rgba(0, 0, 0, 0.3);
 }
 
 nav > div > ul > li > a {
@@ -32,6 +33,7 @@ nav > div > ul > li > a {
 .page-title {
   padding-top: 30px;
   text-align: center;
+  margin: auto;
 }
 
 /* HOME ELEMENTS */
